--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -109,3 +109,10 @@ body {
 .bg-tag-category {
   @apply bg-fuchsia-500 text-white rounded-full px-4 py-2 font-bold hover:bg-fuchsia-600;
 }
+
+.bg-tag-city-for-list {
+  @apply p-1 md:px-2 md:py-1 bg-gray-100 text-gray-500 rounded-sm hover:bg-sky-500 hover:text-white;
+}
+.bg-tag-category-for-list {
+  @apply p-1 md:px-2 md:py-1 bg-gray-100 text-gray-500 rounded-sm hover:bg-fuchsia-500 hover:text-white;
+}
