--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -116,3 +116,10 @@ body {
 .bg-tag-category-for-list {
   @apply p-1 md:px-2 md:py-1 bg-gray-100 text-gray-500 rounded-sm hover:bg-fuchsia-500 hover:text-white;
 }
+
+.bg-tag-city-for-thumbnail {
+  @apply min-h-12 min-w-8 p-1 md:px-2 md:py-1 bg-fuchsia-500 text-white hover:bg-fuchsia-600;
+}
+.bg-tag-category-for-thumbnail {
+  @apply min-h-12 min-w-8 p-1 md:px-2 md:py-1 bg-sky-500 text-white hover:bg-sky-600;
+}
