--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
   --black: #000000;
   --key-color: #2DB0E0;
   --key-color-light: #6FD8FE;
+  --dplus-red: #FF007E;
 }
 
 @theme inline {
@@ -94,6 +95,13 @@ body {
   }
 }
 
+.bg-dplus-red {
+  background-color: var(--dplus-red);
+}
+
+.color-dplus-red {
+  color: var(--dplus-red);
+}
 
 .bg-tag-country {
   @apply bg-rose-500 text-white rounded-full px-4 py-2 font-bold hover:bg-rose-600;
